--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,13 @@ body {
   justify-content: center;
   padding: 25px;
 }
+
+video {
+  width: calc(100%);
+  height: calc(100%);
+}
+
+canvas {
+  width: calc(100%);
+  height: calc(100%);
+}
